embeded web server

--- a/HB.LinkSaver/HB.LinkSaver.csproj
+++ b/HB.LinkSaver/HB.LinkSaver.csproj
@@ -16,4 +16,9 @@
 		
 	</ItemGroup>
 
+	<ItemGroup>
+		<!-- asp.net core referans eklem! -->
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
 </Project>
