--- a/HB.LinkSaver/HB.LinkSaver.csproj
+++ b/HB.LinkSaver/HB.LinkSaver.csproj
@@ -9,11 +9,11 @@
 
 	  <ApplicationHighDpiMode>SystemAware</ApplicationHighDpiMode>
 	  <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
-	  <ApplicationIcon>strategy_finance_document_share_management_business_icon_263041.ico</ApplicationIcon>
+	  <ApplicationIcon>myicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="strategy_finance_document_share_management_business_icon_263041.ico" />
+    <Content Include="myicon.ico" />
   </ItemGroup>
 	<ItemGroup>
 
