--- a/HB.LinkSaver/HB.LinkSaver.csproj
+++ b/HB.LinkSaver/HB.LinkSaver.csproj
@@ -13,7 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="myicon.ico" />
+    <Content Include="myicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 	<ItemGroup>
 
