--- a/HB.LinkSaver/LinkSaverExtention/manifest.json
+++ b/HB.LinkSaver/LinkSaverExtention/manifest.json
@@ -1,13 +1,12 @@
 {
-    "manifest_version": 3,
-    "name": "Link Saver",
-    "version": "1.0",
-    "description": "link saver app communication",
-    "permissions": [
-      "activeTab","scripting","webRequest"
-    ],
-    "action": {
-      "default_popup": "popup.html"
-    }
-    
+  "manifest_version": 3,
+  "name": "Link Saver",
+  "version": "1.0",
+  "host_permissions": [ "<all_urls>" ],
+  "description": "link saver app communication",
+  "permissions": [ "activeTab", "scripting", "webRequest", "tabs" ],
+  "action": {
+    "default_popup": "popup.html"
   }
+
+}
